--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing = "20px">
       <tr>
-        <td><img src="MySitePfp.png" height="200" width= "200"alt="vijay's Twitter pfp"></td>
+        <td><img src="MySitePfp.png" height="200" width= "200"alt="vijay's pfp"></td>
         <td>
         <h1>Vijay</h1>
         <p><em><strong>Computer Science</strong> Major.</em></p>
@@ -21,7 +21,7 @@
     <ul>
       <li>Did my schooling from <a href="https://davairoli.ac.in/">D.A.V public School,Airoli.</a></li>
       <li>Completed my +1 and +2 from <a href="http://www.saradaedu.com/">Sarada Educational institute, Vijayawada.</a></li>
-      <li>Majoring in C.S.E from <a href="http://www.sacet.ac.in/index_main.html">St.Ann's college of Engineering,Chirala.</a></li>
+      <li>Majoring in <strong>C.S.E</strong> from <a href="http://www.sacet.ac.in/index_main.html">St.Ann's college of Engineering,Chirala.</a></li>
     </ul>
     <hr>
     <table cellspacing = "10px">
